apps/searxng/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: searxng
  namespace: tools
  labels:
    app: searxng
spec:
  type: NodePort
  selector:
    app: searxng
  ports:
    - name: http
      port: 80
      targetPort: 8080
      nodePort: 30910
